[package]
name = "acceptor_connect"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sezi-yuan/concurrent-biproxy.git"
description = "holding the connection of client"
license = "MIT/Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
async-trait = "0"

tracing = "0.1"
acceptor_serde = { version = "0", path = "../serde" }

